Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,18 +1,9 @@
-"project_id": "433800"
-"api_token": "CROWDIN_PERSONAL_TOKEN"
-"base_path": "/"
-"base_url": "https://api.crowdin.com"
-"preserve_hierarchy": true
-
-"files": [
-  {
-    "source": "/app/src/main/res/values/strings.xml",
-    "translation": "/app/src/main/res/values-%android_code%/%original_file_name%",
-    "update_option": "update_without_changes",
-    "escape_quotes": 2
-  },
-  {
-    "source": "fastlane/metadata/android/en-US/full_description.txt",
-    "translation": "fastlane/metadata/android/%locale%/%original_file_name%"
-  }
-]
+base_path: /
+base_url: 'https://api.crowdin.com'
+preserve_hierarchy: true
+files:
+  - source: /app/src/main/res/values/strings.xml
+    translation: /app/src/main/res/values-%android_code%/%original_file_name%
+    update_option: update_without_changes
+  - source: fastlane/metadata/android/en-US/full_description.txt
+    translation: fastlane/metadata/android/%locale%/%original_file_name%
