--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ android {
       matchingFallbacks = ['debug']
     }
     release {
-      minifyEnabled false
-      shrinkResources false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
@@ -91,8 +91,8 @@ android {
     }
     play {
       applicationIdSuffix ".play"
-      minifyEnabled false
-      shrinkResources false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
