Added environment variable for Fastlane's benefit
Fixes:

> SDK location not found. Define location with an ANDROID_SDK_ROOT environment variable or by setting the sdk.dir path in your project's local properties file at '/builds/spacecowboy/Feeder/local.properties'.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ cache:
       && rm -rf /var/lib/apt/lists/*
     - export GRADLE_USER_HOME="$(pwd)/.gradle"
     - export ANDROID_HOME="$(pwd)/.androidhome"
+    - export ANDROID_SDK_ROOT="$(pwd)/.androidhome"
     - export PATH="${ANDROID_HOME}/emulator/:${ANDROID_HOME}/tools/bin/:${ANDROID_HOME}/tools/:${ANDROID_HOME}/platform-tools/:${PATH}"
     - ci/before
     - chmod +x ./gradlew
