Disabled minification due to crash on old Android
Fixes #326

This is the stacktrace:

01-14 00:00:30.642 4090-4090/com.nononsenseapps.feeder E/dalvikvm:
Could not find class 'android.util.Size', referenced from method
android.support.v4.media.MediaDescriptionCompatApi21$Builder.bundleOf
01-14 00:00:30.642 4090-4090/com.nononsenseapps.feeder E/dalvikvm:
Could not find class 'android.util.SizeF', referenced from method
android.support.v4.media.MediaDescriptionCompatApi21$Builder.bundleOf
01-14 00:00:30.642 4090-4090/com.nononsenseapps.feeder E/dalvikvm:
Could not find class 'android.text.PrecomputedText', referenced from
method
android.support.v4.media.MediaDescriptionCompatApi21$Builder.setPrecomputedText
01-14 00:00:30.652 4090-4090/com.nononsenseapps.feeder E/dalvikvm:
Could not find class
'androidx.work.impl.background.systemjob.SystemJobService', referenced
from method
androidx.work.impl.Schedulers.createBestAvailableBackgroundScheduler
01-14 00:00:30.652 4090-4090/com.nononsenseapps.feeder E/dalvikvm:
Could not find class
'androidx.work.impl.constraints.trackers.NetworkStateTracker$NetworkStateCallback',
referenced from method
androidx.work.impl.constraints.trackers.NetworkStateTracker.<init>
01-14 00:00:30.662 4090-4090/com.nononsenseapps.feeder
E/AndroidRuntime: FATAL EXCEPTION: main
    java.lang.VerifyError: kotlinx/coroutines/AbstractCoroutine
        at
        android.support.v4.media.MediaDescriptionCompatApi21$Builder.launch$default(MediaDescriptionCompatApi21.java:6)
        at
        androidx.lifecycle.LifecycleCoroutineScopeImpl.register(Lifecycle.kt:1)
        at
        androidx.lifecycle.LifecycleKt.getCoroutineScope(Lifecycle.kt:7)
        at
        androidx.lifecycle.LifecycleOwnerKt.getLifecycleScope(LifecycleOwner.kt:1)
        at
        com.nononsenseapps.feeder.ui.FeedActivity.<init>(FeedActivity.kt:11)
        at java.lang.Class.newInstanceImpl(Native Method)
        at java.lang.Class.newInstance(Class.java:1130)
        at
        and

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ android {
       matchingFallbacks = ['debug']
     }
     release {
-      minifyEnabled true
-      shrinkResources true
+      minifyEnabled false
+      shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
@@ -87,8 +87,9 @@ android {
     }
     play {
       applicationIdSuffix ".play"
-      minifyEnabled true
-      shrinkResources true
+      // If you re-enable this - fix the issues on Android 4.3
+      minifyEnabled false
+      shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
