--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,8 +153,9 @@ dependencies {
   // For better fetching
   implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
   // Image loading
-  implementation "com.github.bumptech.glide:glide:3.7.0"
-  implementation "com.github.bumptech.glide:okhttp3-integration:1.4.0@aar"
+  implementation("io.coil-kt:coil-base:1.1.1")
+  implementation("io.coil-kt:coil-gif:1.1.1")
+  implementation("io.coil-kt:coil-svg:1.1.1")
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   // Coroutines
