--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,17 @@
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter() {
+            content {
+                includeModule("org.jetbrains.kotlinx", "kotlinx-collections-immutable-jvm")
+                includeModule("org.jetbrains.trove4j", "trove4j")
+                includeModule("com.linkedin.dexmaker", "dexmaker")
+            }
+        }
+    }
+}
 include ':app'
 include ':jsonfeed-parser'
 
