--- a/app/build.gradle
+++ b/app/build.gradle
@@ -189,7 +189,7 @@ dependencies {
   implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
   implementation "androidx.compose.ui:ui-tooling:$composeVersion"
   implementation "com.google.android.material:material:$material_version"
-  // implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
+  implementation "androidx.constraintlayout:constraintlayout-compose:$constraintLayoutComposeVersion"
 
   // Better times
   implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
