--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
 
     androidx_core_version = "1.2.0"
     workmanager_version = '2.4.0'
-    constraintlayout_version = "2.0.0-alpha5"
+    constraintlayout_version = "2.0.4"
     recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
     appcompat_version = "1.1.0"
@@ -38,6 +38,7 @@ buildscript {
     nav_version = "2.1.0"
     activityComposeVersion = "1.3.0-alpha03"
     composeVersion = "1.0.0-beta01"
+    constraintLayoutComposeVersion = "1.0.0-alpha05"
 
     espresso_version = "3.1.0"
     uiautomator_version = "2.2.0"
