--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
     constraintlayout_version = "2.0.4"
     recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
-    appcompat_version = "1.1.0"
+    appcompat_version = "1.3.0-beta01"
     material_version = "1.1.0"
     preference_version = "1.1.0"
     test_runner_version = "1.1.0"
