--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,6 +190,7 @@ dependencies {
   implementation "androidx.compose.ui:ui-tooling:$composeVersion"
   implementation "com.google.android.material:material:$material_version"
   implementation "androidx.constraintlayout:constraintlayout-compose:$constraintLayoutComposeVersion"
+  implementation "androidx.navigation:navigation-compose:$navigationComposeVersion"
 
   // Better times
   implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
