--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ buildscript {
     activityComposeVersion = "1.3.0-alpha03"
     composeVersion = "1.0.0-beta01"
     constraintLayoutComposeVersion = "1.0.0-alpha05"
+    navigationComposeVersion = "1.0.0-alpha09"
 
     espresso_version = "3.1.0"
     uiautomator_version = "2.2.0"
