FeedList and EmptyView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -176,7 +176,7 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-  implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+  implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
   // Compose
   implementation "androidx.activity:activity-compose:$activityComposeVersion"
@@ -191,6 +191,7 @@ dependencies {
   implementation "com.google.android.material:material:$material_version"
   implementation "androidx.constraintlayout:constraintlayout-compose:$constraintLayoutComposeVersion"
   implementation "androidx.navigation:navigation-compose:$navigationComposeVersion"
+  implementation "androidx.paging:paging-compose:$pagingComposeVersion"
 
   // Better times
   implementation "com.jakewharton.threetenabp:threetenabp:$threetenabp_version"
