--- a/build.gradle
+++ b/build.gradle
@@ -32,14 +32,15 @@ buildscript {
     preference_version = "1.1.0"
     test_runner_version = "1.1.0"
     test_rules_version = "1.1.0"
-    paging_version = '2.1.1'
     lifecycle_version = "2.2.0"
-    room_version = "2.2.6"
+    room_version = "2.3.0-rc01"
     nav_version = "2.1.0"
     activityComposeVersion = "1.3.0-alpha03"
     composeVersion = "1.0.0-beta01"
     constraintLayoutComposeVersion = "1.0.0-alpha05"
     navigationComposeVersion = "1.0.0-alpha09"
+    pagingVersion = "3.0.0-beta02"
+    pagingComposeVersion = "1.0.0-alpha08"
 
     espresso_version = "3.1.0"
     uiautomator_version = "2.2.0"
