--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ buildscript {
     okio_version = "2.8.0"
     conscrypt_version = "2.5.1"
 
-    kodein_version = "6.3.3"
+    kodeinVersion = "7.5.0"
+    kodeinComposeVersion = "7.5.0"
     coroutines_version = "1.4.2"
     rome_version = "1.7.1-f4"
     moshi_version = "1.5.0"
