--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,21 @@ android {
   }
 }
 
+configurations.all {
+  resolutionStrategy {
+//    failOnVersionConflict()
+
+    force "com.squareup.okhttp3:okhttp:$okhttp_version"
+    force "com.squareup.okio:okio:$okio_version"
+    force "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    force "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    force "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    force "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    force "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+  }
+}
+
 dependencies {
   kapt "androidx.room:room-compiler:$room_version"
 
