--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
     multi_dex_version = "1.0.3"
 
     kodein_version = "6.3.3"
-    coroutines_version = "1.3.2"
+    coroutines_version = "1.4.2"
     okhttp_version = "4.9.1"
+    okio_version = "2.8.0"
     rome_version = "1.7.1-f4"
     moshi_version = "1.5.0"
     threetentest_version = "1.2.2"
