Added support for TLSv1.3 on older versions of Android
Trying to add this again. Combined with upgraded okhttp and conscrypt
- the versions of which are linked.

Fixes #335

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,6 +163,8 @@ dependencies {
   implementation project(":jsonfeed-parser")
   // For better fetching
   implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
+  // For supporting TLSv1.3 on pre Android-10
+  implementation "org.conscrypt:conscrypt-android:$conscrypt_version"
   // Image loading
   implementation("io.coil-kt:coil-base:1.1.1")
   implementation("io.coil-kt:coil-gif:1.1.1")
