Excluded junk from packaging which only conflicts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,19 @@ android {
   kotlinOptions {
     jvmTarget = "1.8"
   }
+
+  packagingOptions {
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/license.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/notice.txt'
+    exclude 'META-INF/ASL2.0'
+    exclude 'META-INF/AL2.0'
+    exclude 'META-INF/LGPL2.1'
+  }
 }
 
 configurations.all {
