--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
   ext {
-    kotlin_version = "1.4.31"
-    gradle_build_version = "7.0.0-alpha15"
+    kotlin_version = "1.4.32"
+    gradle_build_version = "7.0.0-beta01"
     build_tools_version = "30.0.3"
 
     multi_dex_version = "1.0.3"
@@ -14,7 +14,7 @@ buildscript {
     conscrypt_version = "2.5.1"
 
     kodeinVersion = "7.5.0"
-    kodeinComposeVersion = "7.5.0"
+//    kodeinComposeVersion = "7.5.0"
     coroutines_version = "1.4.2"
     rome_version = "1.7.1-f4"
     moshi_version = "1.5.0"
@@ -23,26 +23,27 @@ buildscript {
     jsoup_version = "1.7.3"
     readability4j_version = "1.0.5"
 
-    androidx_core_version = "1.2.0"
+    androidx_core_version = "1.5.0"
+    androidx_testcore_version = "1.3.0"
     workmanager_version = '2.4.0'
     constraintlayout_version = "2.0.4"
     recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
-    appcompat_version = "1.3.0-beta01"
+    appcompat_version = "1.3.0"
     material_version = "1.1.0"
     preference_version = "1.1.0"
     test_runner_version = "1.1.0"
     test_rules_version = "1.1.0"
     lifecycle_version = "2.2.0"
     room_version = "2.3.0-rc01"
-    nav_version = "2.1.0"
-    activityComposeVersion = "1.3.0-alpha03"
-    composeVersion = "1.0.0-beta03"
-    constraintLayoutComposeVersion = "1.0.0-alpha05"
-    navigationComposeVersion = "1.0.0-alpha09"
+    nav_version = "2.3.5"
+    activityComposeVersion = "1.3.0-alpha08"
+    composeVersion = "1.0.0-beta07"
+    constraintLayoutComposeVersion = "1.0.0-alpha07"
+    navigationComposeVersion = "2.4.0-alpha01"
     pagingVersion = "3.0.0-beta02"
-    pagingComposeVersion = "1.0.0-alpha08"
-    coilComposeVersion = "0.7.0"
+    pagingComposeVersion = "1.0.0-alpha09"
+    coilComposeVersion = "0.10.0"
 
     espresso_version = "3.1.0"
     uiautomator_version = "2.2.0"
