--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,6 +175,7 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
   implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
   // Compose
