--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ buildscript {
     preference_version = "1.1.0"
     test_runner_version = "1.1.0"
     test_rules_version = "1.1.0"
-    lifecycle_version = "2.2.0"
+    lifecycle_version = "2.3.1"
+    savedstate_version = "1.1.0"
     room_version = "2.3.0-rc01"
     nav_version = "2.3.5"
     activityComposeVersion = "1.3.0-alpha08"
