--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,36 +24,43 @@
     <activity
       android:name="com.nononsenseapps.feeder.ui.MainActivity"
       android:exported="true"
-      android:label="FeedComp"
+      android:label="@string/app_name"
       android:theme="@style/AppThemeDay.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-    </activity>
-
-    <activity
-      android:name=".ui.FeedActivity"
-      android:label="@string/app_name">
-
-      <nav-graph android:value="@navigation/nav_graph" />
-
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-
       <intent-filter>
         <action android:name="android.intent.action.MANAGE_NETWORK_USAGE" />
-
         <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
-
       <meta-data
         android:name="android.app.shortcuts"
         android:resource="@xml/shortcuts" />
     </activity>
+
+<!--    <activity-->
+<!--      android:name=".ui.FeedActivity"-->
+<!--      android:label="@string/app_name">-->
+
+<!--      <nav-graph android:value="@navigation/nav_graph" />-->
+
+<!--      <intent-filter>-->
+<!--        <action android:name="android.intent.action.MAIN" />-->
+
+<!--        <category android:name="android.intent.category.LAUNCHER" />-->
+<!--      </intent-filter>-->
+
+<!--      <intent-filter>-->
+<!--        <action android:name="android.intent.action.MANAGE_NETWORK_USAGE" />-->
+
+<!--        <category android:name="android.intent.category.DEFAULT" />-->
+<!--      </intent-filter>-->
+
+<!--      <meta-data-->
+<!--        android:name="android.app.shortcuts"-->
+<!--        android:resource="@xml/shortcuts" />-->
+<!--    </activity>-->
 
     <activity
       android:name=".ui.EditFeedActivity"
