--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
   ext {
-    kotlin_version = "1.4.32"
-    gradle_build_version = "7.0.0-beta03"
+    kotlin_version = "1.5.10"
+    gradle_build_version = "7.0.0-beta04"
     build_tools_version = "30.0.3"
 
     multi_dex_version = "1.0.3"
@@ -37,15 +37,16 @@ buildscript {
     lifecycle_version = "2.3.1"
     savedstate_version = "1.1.0"
     room_version = "2.3.0-rc01"
-    nav_version = "2.3.5"
-    activityComposeVersion = "1.3.0-alpha08"
-    composeVersion = "1.0.0-beta07"
-    constraintLayoutComposeVersion = "1.0.0-alpha07"
-    navigationComposeVersion = "2.4.0-alpha01"
-    pagingVersion = "3.0.0-beta02"
-    pagingComposeVersion = "1.0.0-alpha09"
-    accompanistVersion = "0.10.0"
+    // Compose related below
+    nav_version = "2.4.0-alpha03"
+    activityComposeVersion = "1.3.0-beta02"
+    composeVersion = "1.0.0-beta09"
+    navigationComposeVersion = nav_version
+    pagingVersion = "3.0.0"
+    pagingComposeVersion = "1.0.0-alpha10"
+    accompanistVersion = "0.12.0"
 
+    // Tests
     espresso_version = "3.1.0"
     uiautomator_version = "2.2.0"
     test_ext_junit_version = "1.0.0"
