--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
     test_rules_version = "1.1.0"
     lifecycle_version = "2.3.1"
     savedstate_version = "1.1.0"
-    room_version = "2.3.0-rc01"
+    room_version = "2.3.0"
     // Compose related below
     nav_version = "2.4.0-alpha03"
     activityComposeVersion = "1.3.0-beta02"
