--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
   ext {
     kotlin_version = "1.5.10"
-    gradle_build_version = "7.0.0-beta04"
+    gradle_build_version = "7.0.0"
     build_tools_version = "30.0.3"
 
     multi_dex_version = "1.0.3"
@@ -38,12 +38,12 @@ buildscript {
     savedstate_version = "1.1.0"
     room_version = "2.3.0"
     // Compose related below
-    nav_version = "2.4.0-alpha03"
-    activityComposeVersion = "1.3.0-beta02"
-    composeVersion = "1.0.0-beta09"
+    nav_version = "2.4.0-alpha06"
+    activityComposeVersion = "1.3.0"
+    composeVersion = "1.0.0"
     navigationComposeVersion = nav_version
     pagingVersion = "3.0.0"
-    pagingComposeVersion = "1.0.0-alpha10"
+    pagingComposeVersion = "1.0.0-alpha12"
     accompanistVersion = "0.12.0"
 
     // Tests
