--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
   defaultConfig {
     applicationId "com.nononsenseapps.feeder"
-    versionCode 106
-    versionName "1.13.5"
+    versionCode 201
+    versionName "2.0.0-beta.1"
     compileSdkVersion 30
     minSdkVersion 23
     targetSdkVersion 30
