Validate fastlane deployment on 2.0.0 branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ validate_deployment:
     - source devenv && ./deploy_playstore.sh --dry-run
   needs: []
   only:
+    - compose
     - master
     - tags
 
