--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ android {
       matchingFallbacks = ['debug']
     }
     release {
-      minifyEnabled false
-      shrinkResources false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
@@ -87,9 +87,8 @@ android {
     }
     play {
       applicationIdSuffix ".play"
-      // If you re-enable this - fix the issues on Android 4.3
-      minifyEnabled false
-      shrinkResources false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
       if (project.hasProperty('STORE_FILE')) {
