Fixed theme on all activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
+    android:theme="@style/AppThemeDay.NoActionBar"
     android:usesCleartextTraffic="true">
 
     <meta-data
@@ -25,8 +26,7 @@
     <activity
       android:name="com.nononsenseapps.feeder.ui.MainActivity"
       android:exported="true"
-      android:label="@string/app_name"
-      android:theme="@style/AppThemeDay.NoActionBar">
+      android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
