--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
   defaultConfig {
     applicationId "com.nononsenseapps.feeder"
-    versionCode 206
-    versionName "2.0.0-beta.6"
+    versionCode 207
+    versionName "2.0.0-rc.1"
     compileSdkVersion 31
     minSdkVersion 23
     targetSdkVersion 31
