Changed so CI pipeline builds APK with R8 optimizations

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ test:
 compile:
   stage: build
   script:
-    - source devenv && ./gradlew assembleDebug packageDebugAndroidTest -PdisablePreDex
+    - source devenv && ./gradlew assembleDebugMini packageDebugAndroidTest
   needs: []
   artifacts:
     paths:
