--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ buildscript {
     navigationComposeVersion = nav_version
     pagingVersion = "3.0.0"
     pagingComposeVersion = "1.0.0-alpha12"
-    accompanistCoilVersion = "0.12.0"
     accompanistVersion = "0.17.0"
+    coilVersion = "1.3.2"
 
     // Tests
     espresso_version = "3.1.0"
