--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
     <activity
       android:name="com.nononsenseapps.feeder.ui.MainActivity"
       android:exported="true"
-      android:label="@string/app_name">
+      android:label="@string/app_name"
+      android:launchMode="singleTop" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
