--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
 
     androidx_core_version = "1.5.0"
     androidx_testcore_version = "1.4.0"
-    workmanager_version = '2.4.0'
+    workmanager_version = '2.7.0-beta01'
     constraintlayout_version = "2.0.4"
     recyclerview_version = "1.0.0"
     legacy_support_version = "1.0.0"
