--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
   defaultConfig {
     applicationId "com.nononsenseapps.feeder"
-    versionCode 210
-    versionName "2.0.0-rc.4"
+    versionCode 211
+    versionName "2.0.0"
     compileSdkVersion 31
     minSdkVersion 23
     targetSdkVersion 31
