Removed reference to deprecated kotlin-android-extensions gradle plugin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+plugins {
+  id 'com.android.application'
+  id 'kotlin-android'
+  id 'kotlin-kapt'
+  id 'kotlin-parcelize'
+}
 
 android {
   buildToolsVersion "$build_tools_version"
